2008-10-01  Øyvind Kolås  <pippin@linux.intel.com>

	Bug 1108 - Enter/Leave events logics wrt. skipped motion events

	Handle dropped motion events when computing crossing events,
	based on a patch from Gwenole Beauchesne.

	* clutter/clutter-main.c: (clutter_event_get_device): internal static
	utility function.
	(clutter_do_event): generate enter/leave events for all pointer
	events.
	(generate_enter_leave_events): modified enter/leave events generator
	to work for all pointer event types. Enter/leave events are now
	delivered before the motion/button event that caused the crossing to
	happen.
	* clutter/clutter-event.c: (clutter_event_copy), (clutter_event_free):
	removed reference counting logic that is not needed when the crossing
	events are directly delivered.

2008-09-29  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac: Post branch bump to 0.9.0

2008-09-25  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac: Post release bump to 0.8.3

======== Release 0.8.2 ========================================================

2008-09-25  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac:
	* README:
	* NEWS: Release 0.8.2

2008-09-25  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-event.h: Fix missing documentation.

2008-09-24  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1130 - CLUTTER_MOTION is not emitted when time goes backwards.

	* clutter/clutter-main.c (clutter_do_event): Check for time
	rollbacks inside the motion event throttling. (Pierce Liu)

2008-09-23  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-timeout-pool.c: Reword previous commit.

2008-09-23  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-timeout-pool.c:
	(clutter_timeout_pool_new): Fix previous commit: g_source_unref()
	is not needed. (Thanks to Neil Roberts)

2008-09-23  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1154 - clutter_timeout_pool_new() documentation doesn't say
	how to free
